Technologie_Objet/tps/.svn/pristine/6e/6e77bfb46243d057c8376a21d8dda0bc7f8a9c5f.svn-base
allumettes/Partie.java:66: error: cannot find symbol
	public Joueur splitArg(String[] arg) {
	       ^
  symbol:   class Joueur
  location: class Partie
1 error
